crates/cli/tests/snapshots/daemon__daemon_disable_refuses_non_pv_owned_launch_agent.snap
---
source: crates/cli/tests/daemon.rs
expression: "(output, environment.operations(), plist_after_disable)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "",
        stderr: "error: LaunchAgent file is not PV-owned; leaving it unchanged\n  path: <tempdir>/Library/LaunchAgents/com.prvious.pv.daemon.plist\n",
    },
    [],
    "<plist><dict><key>Label</key><string>com.prvious.pv.daemon</string></dict></plist>\n",
)
