crates/cli/tests/snapshots/daemon__daemon_disable_removes_only_pv_owned_launch_agent.snap
---
source: crates/cli/tests/daemon.rs
expression: "(output, environment.operations(), plist_after_disable)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Daemon disabled\nLaunchAgent removed: <tempdir>/Library/LaunchAgents/com.prvious.pv.daemon.plist\n",
        stderr: "",
    },
    [
        "bootout com.prvious.pv.daemon",
    ],
    None,
)
