crates/cli/tests/snapshots/daemon__daemon_enable_installs_pv_launch_agent_and_starts_it.snap
---
source: crates/cli/tests/daemon.rs
expression: "(output, environment.operations(), plist)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "LaunchAgent installed: <tempdir>/Library/LaunchAgents/com.prvious.pv.daemon.plist\nDaemon started\nDaemon healthy\nSystem reconciliation requested: job_enable_1\n",
        stderr: "",
    },
    [
        "bootstrap <tempdir>/Library/LaunchAgents/com.prvious.pv.daemon.plist",
        "kickstart com.prvious.pv.daemon",
    ],
    "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<!-- Managed by PV -->\n<!DOCTYPE plist PUBLIC \"-//Apple//DTD PLIST 1.0//EN\" \"http://www.apple.com/DTDs/PropertyList-1.0.dtd\">\n<plist version=\"1.0\">\n<dict>\n\t<key>Label</key>\n\t<string>com.prvious.pv.daemon</string>\n\t<key>ProgramArguments</key>\n\t<array>\n\t\t<string><tempdir>/home/.pv/bin/pv</string>\n\t\t<string>daemon:run</string>\n\t</array>\n\t<key>KeepAlive</key>\n\t<true/>\n\t<key>RunAtLoad</key>\n\t<true/>\n\t<key>StandardOutPath</key>\n\t<string><tempdir>/home/.pv/logs/launchd.out.log</string>\n\t<key>StandardErrorPath</key>\n\t<string><tempdir>/home/.pv/logs/launchd.err.log</string>\n</dict>\n</plist>",
)
